fix : Header on mobile

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -36,7 +36,9 @@
       border: solid 0.3rem color.$black;
       box-shadow: 10px 10px 0 color.$black;
       padding: 2rem 4.8rem;
-      transition: box-shadow 0.3s ease, transform 0.3s ease;
+      transition:
+        box-shadow 0.3s ease,
+        transform 0.3s ease;
     }
 
     &__col {
@@ -45,7 +47,9 @@
       }
 
       &--right {
-        flex-grow: 1;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
       }
     }
 
@@ -64,38 +68,25 @@
     }
 
     &__navigation {
-      @include bp.to("desktop") {
-        position: fixed;
-        top: 0;
-        right: -100%;
-        width: 100%;
-        height: 100vh;
-        background: color.$beige-light;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: right 0.3s ease-in-out;
-        z-index: 1;
+      // Desktop: visible normalement
+      @include bp.from("desktop") {
+        display: block;
+      }
 
-        &--active {
-          right: 0;
-        }
+      // Mobile: caché par défaut
+      @include bp.to("desktop") {
+        display: none;
       }
     }
 
     &__menu {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
-      justify-content: right;
-      gap: 3rem;
+      justify-content: flex-end;
+      gap: 2rem;
 
       @include utils.list-reset;
-
-      @include bp.from("desktop") {
-        flex-direction: initial;
-        gap: 2rem;
-      }
 
       &-item {
         &--cta {
@@ -117,10 +108,7 @@
         color: color.$gray-dark;
         z-index: 1;
         transition: color 0.3s ease;
-        font-size: 2rem;
-        @include bp.from("desktop") {
-          font-size: inherit;
-        }
+
         &:hover {
           color: color.$orange;
         }
@@ -157,8 +145,8 @@
       background: transparent;
       border: none;
       padding: 0;
-      margin-left: auto;
-      z-index: 10;
+      cursor: pointer;
+      z-index: 1001;
 
       @include bp.from("desktop") {
         display: none;
@@ -169,7 +157,7 @@
         height: $line-height;
         background-color: color.$black;
         border-radius: 0.15rem;
-        transition-duration: 0.4s;
+        transition: all 0.3s ease;
       }
 
       &--active {
@@ -180,7 +168,6 @@
 
           &:nth-child(2) {
             opacity: 0;
-            transition-duration: 0s;
           }
 
           &:nth-child(3) {
@@ -188,6 +175,85 @@
           }
         }
       }
+    }
+  }
+}
+
+// Menu mobile plein écran - en dehors du header
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: color.$beige-light;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transition:
+    opacity 0.3s ease,
+    visibility 0.3s ease;
+
+  &--active {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__close {
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+    width: 4rem;
+    height: 4rem;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+
+    &-line {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 3rem;
+      height: 0.3rem;
+      background-color: color.$black;
+      border-radius: 0.15rem;
+
+      &:nth-child(1) {
+        transform: translate(-50%, -50%) rotate(45deg);
+      }
+
+      &:nth-child(2) {
+        transform: translate(-50%, -50%) rotate(-45deg);
+      }
+    }
+  }
+
+  &__nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+  }
+
+  &__link {
+    font-size: 2.4rem;
+    text-decoration: none;
+    color: color.$gray-dark;
+    font-weight: 600;
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: color.$orange;
+    }
+
+    &--cta {
+      @include btn.class("primary");
+      font-size: 2rem;
     }
   }
 }
